--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-    main {
-        @apply max-h-[calc(100vh-70px)] h-screen overflow-y-auto;
+@layer components {
+    .h-body {
+        @apply h-[calc(100dvh-70px)];
     }
 }
 
