--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,36 @@
   }
 }
 
+:root {
+    body, header {
+        background-color: rgb(240, 240, 240);
+        color: black;
+    }
+    
+    ::-webkit-scrollbar-track {
+        background: #cfcfcf;
+    }
+    
+    ::-webkit-scrollbar-corner {
+        background: #cfcfcf;
+    }
+}
+  
+[data-theme='dark'] {
+    body, header {
+        background-color: rgb(30, 30, 30);
+        color: white;
+    }
+    
+    ::-webkit-scrollbar-track {
+        background: #333;
+    }
+    
+    ::-webkit-scrollbar-corner {
+        background: #333;
+    }
+}
+
 @media only screen and (min-device-width: 500px) {
     ::-webkit-scrollbar {
         width: 10px;
